test_case/rust-lang_rust/56362_443177474_23.rs
compile_fail,E0005\nlet x = Some(1);\nlet Some(y) = x;\n// error: refutable pattern in local binding: `None` not covered\n